<resources>
    <string name="app_name">Shoper</string>
    <string name="categories_title">Lista zakupów</string>

    <string name="title_clone">Kopiowanie listy \"%s\"</string>

    <string name="qrcode_generate_title">QR Code: %s</string>
    <string name="category_title_create">Tworzenie listy</string>
    <string name="category_title_edit">Edycja listy</string>

    <string name="product_title_create">Tworzenie produktu</string>
    <string name="product_title_edit">Edycja produktu</string>

    <string name="new_list">Nowa lista</string>
    <string name="scanner_ean">Zeskanuj EAN</string>
    <string name="scanner_qr">Zeskanuj QR Code</string>
    <string name="settings">Ustawienia</string>

    <string name="category_title_name">Nazwa kategorii</string>
    <string name="category_title_description">Opis</string>
    <string name="category_button_save">Zapisz</string>
    <string name="category_button_cancel">Anuluj</string>

    <string name="product_title_name">Nazwa Produktu</string>
    <string name="product_title_weight">Jednostka miary</string>
    <string name="product_title_amount">Ilość</string>
    <string name="product_hint_weight">Kliknij aby wybrać</string>
    <string name="product_button_save">Zapisz</string>
    <string name="product_button_cancel">Anuluj</string>

    <string name="confirm_remove_product">Czy napewno chcesz usunąć produkt \"%s\" z listy?</string>

    <string name="clone_category_name">%s - Kopia</string>
    <string name="remove">Usuń</string>
    <string name="up">W górę</string>
    <string name="add">Dodaj produkt</string>
    <string name="edit">Edytuj</string>
    <string name="clone">Sklonuj</string>
    <string name="down">W dół</string>
    <string name="unselect">Odznacz</string>
    <string name="category_elements">Do kupienia: %d, Kupionych: %d, Wszystkich: %d</string>

    <string name="picker_select_weight">Wybierz jednostkę miary</string>

    <string name="weight_piece">Sztuk</string>
    <string name="weight_kilo">Kilogramów</string>
    <string name="weight_grams">Gramów</string>
    <string name="weight_litr">Litrów</string>

    <string name="weight_display_name_piece">Sztuki</string>
    <string name="weight_display_name_kilograms">Kilogramy</string>
    <string name="weight_display_name_grams">Gramy</string>
    <string name="weight_display_name_litr">Litry</string>

    <string name="weight_display_short_piece">szt.</string>
    <string name="weight_display_short_kilograms">Kg</string>
    <string name="weight_display_short_grams">g</string>
    <string name="weight_display_short_litr">L</string>

    <string name="product_menu_bought">Kupione</string>
    <string name="product_menu_waiting">Do kupienia</string>
    <string name="product_menu_part">Częściowo kupione</string>
    <string name="product_menu_no_found">Brak w sklepie</string>

    <string name="product_status_waiting">Produkty do zakupienia</string>
    <string name="product_status_complete">Produkty zakupione</string>
    <string name="product_status_not_found">Brak produktów</string>

    <string name="product_error_no_product_weight">Wybierz jednostkę miary produktu</string>
    <string name="product_error_no_product_name">Wprowadź nazwę produktu</string>
    <string name="product_error_no_amount">Wprowadź ilość</string>
    <string name="product_add_fast_comment">Dodaj komentarz</string>

    <string name="not_define_any_category">Brak zdefiniowanych list zakupów</string>

    <string name="clone_all_products_in_list">Które elementy listy skopiować?</string>
    <string name="clone_all_products_in_list_all">Wszystkie</string>
    <string name="clone_all_products_in_list_selected">Wybrane</string>

    <string name="copy_list_information">Tylko zaznaczone elementy pojawią się na skopiowanej liście</string>
    <string name="copy_check_element">Dopiero po zaznaczeniu elementu można zmieniać jego ilość</string>

    <string name="exit_clone_message">Czy napewno chcesz opuścić ekran kopiowania listy? Wyjście bez zapisania spowoduje utratę wykonanych czynności!</string>
    <string name="exit_clone_message_yes">Wyjdź</string>
    <string name="exit_clone_message_no">Pozostań</string>
    <string name="error_clone_empty_list">Kopiowana lista nie może być pusta. Zaznacz przynajmniej jeden element.</string>

    <string name="search_query_hint">Wprowadź nazwę produktu</string>
    <string name="no_result">Brak wyników wyszukiwania</string>

    <string name="local_ean_not_found">Nie oznaleziono kodu %s. Czy chcesz go wprowadzić do aplikacji?</string>
    <string name="button_complete">Zakończ</string>
    <string name="ok">OK</string>

    <string name="yes">Tak</string>
    <string name="no">Nie</string>

    <string name="accept">Akceptuj</string>
    <string name="reject">Odrzuć</string>
    <string name="cancel">Anuluj</string>
    <string name="save">Zapisz</string>
    <string name="yes_remove">Tak, usuń</string>

    <string name="warning_of_remove_selected_product">Czy chcesz usunąć zaznaczone produkty</string>
    <string name="warning_of_fast_change_product_status">"Kliknij, aby dodać komentarz do produktu \"%s\"</string>
</resources>
