<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="5dp">

            <!-- Listy -->
            <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">
                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical">
                                    <TextView
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:text="@string/product_status_waiting"
                                            android:textStyle="bold"
                                            android:textSize="12sp"/>

                                    <androidx.recyclerview.widget.RecyclerView
                                            android:id="@+id/productsWaiting"
                                            android:layout_width="match_parent"
                                            android:layout_height="0dp"
                                            android:layout_weight="1"
                                            android:orientation="vertical"
                                            android:layout_marginTop="5dp"
                                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
                            </LinearLayout>

                            <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical"
                                    android:layout_marginTop="15dp">
                                    <TextView
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:text="@string/product_status_complete"
                                            android:textStyle="bold"
                                            android:textSize="12sp"/>

                                    <androidx.recyclerview.widget.RecyclerView
                                            android:id="@+id/productsComplete"
                                            android:layout_width="match_parent"
                                            android:layout_height="0dp"
                                            android:layout_weight="1"
                                            android:orientation="vertical"
                                            android:layout_marginTop="5dp"
                                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
                            </LinearLayout>

                            <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical"
                                    android:layout_marginTop="15dp">
                                    <TextView
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:text="@string/product_status_part"
                                            android:textStyle="bold"
                                            android:textSize="12sp"/>

                                    <androidx.recyclerview.widget.RecyclerView
                                            android:id="@+id/productsPart"
                                            android:layout_width="match_parent"
                                            android:layout_height="0dp"
                                            android:layout_weight="1"
                                            android:orientation="vertical"
                                            android:layout_marginTop="5dp"
                                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
                            </LinearLayout>


                            <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical"
                                    android:layout_marginTop="15dp">
                                    <TextView
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:text="@string/product_status_not_found"
                                            android:textStyle="bold"
                                            android:textSize="12sp"/>

                                    <androidx.recyclerview.widget.RecyclerView
                                            android:id="@+id/productsNotFound"
                                            android:layout_width="match_parent"
                                            android:layout_height="0dp"
                                            android:layout_weight="1"
                                            android:orientation="vertical"
                                            android:layout_marginTop="5dp"
                                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
                            </LinearLayout>
                    </LinearLayout>
            </ScrollView>

            <!-- Przycisk na dole -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_gravity="center|bottom">
                        <LinearLayout
                            android:id="@+id/new_product_box"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:gravity="center">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:drawableStart="@drawable/ic_add"
                                    android:layout_gravity="center"/>

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/add"/>
                        </LinearLayout>
                        <LinearLayout
                            android:id="@+id/scan_product"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:gravity="center"
                            android:layout_marginStart="10dp">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:drawableStart="@drawable/ic_add"
                                    android:layout_gravity="center"/>

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/scanner_ean"/>
                        </LinearLayout>
                </LinearLayout>
    </LinearLayout>
</layout>